log
Fri 05 May 2023 03:23:38 AM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:7: error: ‘j’ undeclared (first use in this function)
   54 |   for(j=0; j<9; j++){
      |       ^
sudoku.c:54:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:55:9: error: ‘k’ undeclared (first use in this function)
   55 |     for(k=0; k<9; k++){
      |         ^
Compilation failed
62a339f
Fri 05 May 2023 03:23:51 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:14: error: subscripted value is neither array nor pointer nor vector
   56 |       if(n[j][k]==0){
      |              ^
Compilation failed
833171d
Fri 05 May 2023 03:24:12 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f884042
Fri 05 May 2023 03:25:41 AM UTC: 
 sudoku.c | 4 ----
 1 file changed, 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
   66 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
29f157f
Fri 05 May 2023 03:25:52 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
b2da9cd
